Added basic caption option

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Responsive Lightbox",
+  "name": "Responsive-Lightbox",
   "title": "Responsive Lightbox",
   "description": "Lightweight, image only, responive lightbox",
   "author": {
