--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "bugs": "https://github.com/duncanmcdougall/Responsive-Lightbox/issues",
   "version": "1.0.0",
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-cssmin": "~0.6.0"
+    "grunt-contrib-uglify": "^0.9.2"
   }
 }
