--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "version": "1.3.0",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^0.8.1",
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-uglify": "^0.9.2"
