--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "Responsive-Lightbox",
+  "name": "responsive-lightbox",
   "title": "Responsive Lightbox",
   "description": "Lightweight, image only, responive lightbox",
   "author": {
     "name": "Duncan McDougall",
-    "url": "http://www.duncanmcdougall.co.uk"
+    "url": "https://www.belter.io"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/duncanmcdougall/Responsive-Lightbox.git"
   },
   "bugs": "https://github.com/duncanmcdougall/Responsive-Lightbox/issues",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.1",
