--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "responsive-lightbox",
   "title": "Responsive Lightbox",
-  "description": "Lightweight, image only, responive lightbox",
+  "description": "Lightweight, image only, responsive, jQuery lightbox plugin",
   "author": {
     "name": "Duncan McDougall",
     "url": "https://www.belter.io"
@@ -11,7 +11,7 @@
     "url": "https://github.com/duncanmcdougall/Responsive-Lightbox.git"
   },
   "bugs": "https://github.com/duncanmcdougall/Responsive-Lightbox/issues",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.1",
